[package]
name = "som"
authors = ["Jay Kickliter <jay@helium.com>"]
build = "native/build.rs"
edition = "2018"
version = "0.1.0"

[lib]
name = "som"
crate-type = ["dylib"]
path = "native/som.rs"

[dependencies]
rusticsom = { git = "https://github.com/refugeesus/RusticSOM", branch = "rfk/hybrid-mode" }
rustler = "0.22.0-rc.0"
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.13", features = ["serde-1"] }
